--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-# Default configuration for ImageGuard (Phases 1–3).
+# Default configuration for ImageGuard (Phases 1–4).
 
 general:
   log_level: INFO
@@ -18,14 +18,37 @@ modules:
   hidden_text:
     enabled: true
     weight: 1.5
-    thresholds: [50, 100, 150, 200, 250]
+    contrast_thresholds: [50, 100, 150, 200, 250]
     analyze_corners: true
     analyze_borders: true
+    edge_density_threshold: 0.15
+    edge_grid_size: 8
   frequency_analysis:
     enabled: true
     weight: 1.0
+    fft_enabled: true
+    fft_threshold: 0.70
+    dct_enabled: true
+    dct_threshold: 0.60
     wavelet_enabled: true
+    wavelet_threshold: 0.50
+    wavelet_type: haar
+    wavelet_levels: 2
     baseline_model: data/frequency_baseline.json
+  steganography:
+    enabled: true
+    weight: 1.0
+    lsb_analysis: true
+    chi_square_test: true
+    rs_analysis: true
+    spa_analysis: false
+  structural:
+    enabled: true
+    weight: 1.2
+    detect_qr: true
+    detect_barcodes: true
+    detect_screenshots: true
+    analyze_decoded_content: true
 
 scoring:
   # Classification thresholds per PRD Section 3.7.4:
@@ -36,6 +59,7 @@ scoring:
     safe: 0.3
     suspicious: 0.6
     dangerous: 0.6
+  calibration_data: data/calibration.json
 
 api:
   host: 0.0.0.0
