--- a/patterns.yaml
+++ b/patterns.yaml
@@ -37,3 +37,39 @@ patterns:
     regex: '(?:[A-Za-z0-9+/]{4}){10,}(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?'
     min_length: 40
     description: "Potential Base64 encoded content"
+
+  # Typographic visual injection patterns
+  - id: output_manipulation
+    category: visual_injection
+    severity: 0.85
+    regex: '(?i)(just\s+)?(output|respond|reply|answer|say)\s+[''\"]?\w+[''\"]?'
+    description: "Instruction to produce specific output"
+
+  - id: conditional_injection
+    category: visual_injection
+    severity: 0.8
+    regex: '(?i)when\s+(asked|prompted|questioned)\s+(about|for|regarding)'
+    description: "Conditional behavior modification"
+
+  - id: response_override
+    category: visual_injection
+    severity: 0.9
+    regex: '(?i)(always|only|must)\s+(respond|output|say|reply)\s+(with|as)'
+    description: "Force specific response pattern"
+
+  - id: task_hijacking
+    category: visual_injection
+    severity: 0.75
+    keywords:
+      - 'instead of'
+      - 'rather than'
+      - 'not the'
+      - 'override'
+      - 'replace with'
+    description: "Task redirection attempt"
+
+  - id: sorry_injection
+    category: visual_injection
+    severity: 0.85
+    regex: '(?i)(output|say|respond|reply)\s+[''\"]?sorry[''\"]?'
+    description: "Common injection payload targeting refusal"
